# TypeRun-pjd

./: Makefile  manage.py  pyproject.toml
TypeRun-Back/: .env
TypeRun-Back/apps/account/: models.py  permissions.py  tasks.py  urls.py
TypeRun-Back/apps/account/migrations/: 0001_initial.py
TypeRun-Back/typerun/: celery.py  settings.py
apps/account/: serializers.py  views.py
apps/account/migrations/: 0002_account_is_staff_alter_account_is_superuser.py
typerun/: __init__.py  asgi.py  urls.py  wsgi.py
